welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:29: error: value unary_! is not a member of Unit
			if (!murNord()) {
                            ^SnakeBuggle:54: error: value unary_! is not a member of Unit
	} while (!posFinale())
                 ^